now making getData calls to issues api. conditionals determine where on main data array object to add data so it is added to proper objects and object properties. not quite done with that function. then need to write function to make % issues closed calculation.

--- a/initializr/css/main.css
+++ b/initializr/css/main.css
@@ -17,3 +17,12 @@
 .jumbotron {
     padding-bottom: 20px;
 }
+
+/* DIDN'T WORK */
+/*@font-face {
+    font-family: Digital;
+    src: url('djb-get-digital.ttf');
+}
+.digital-font {
+    font-family: Digital;
+}*/
